Fix call button text overflow

--- a/static/scss/_call.scss
+++ b/static/scss/_call.scss
@@ -80,20 +80,26 @@
       // font-weight: 300;
     }
 
-    menuitem {
-      padding: 0.8rem 0;
-      font-size: 1.6rem;
-      font-weight: 600;
-      text-transform: uppercase;
-      overflow: hidden;
-      white-space: nowrap;
-      width: 24.6%;
-      display: inline-block;
-      background-color: fade-out(#fff, 0.2);
-      text-align: center;
+    &__items {
+      display: flex;
+      flex-wrap: wrap;
 
-      &:hover {
-        cursor: pointer;
+      button {
+        flex-grow: 1;
+        flex-basis: 194px;
+        border: 0;
+        margin: 1px;
+        padding: 0.8rem 0;
+        font-size: 1.6rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        background-color: fade-out(#fff, 0.2);
+        text-align: center;
+
+        &:hover {
+          background-color: fade-out(#eee, .2);
+          cursor: pointer;
+        }
       }
     }
   }
